--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@ h1 {
   font-style: italic;
   text-shadow: 2px 2px 8px rgba(0.2, 0.2, 0.2, 0.4);
 }
-#text:hover{
+.text:hover{
   transform: scale(1.3);
 }
 footer {
@@ -70,7 +70,7 @@ footer a:hover {
 <body>
 <header>
 <center>
-<h1 id="text"><i>LAVAS SHOPPING SYSTEM</i></h1>
+<h1 class="text"><i>LAVAS SHOPPING SYSTEM</i></h1>
 <nav>
 <a id="atag"href="home.html">HOME</a>|
 <a id="atag"href="products.html">PRODUCTS</a>|
